# MotorSimulation

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Motor_Simulation.vcxproj  Motor_Simulation.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  buildInfo.mat  builtin_typeid_types.h  cmake_install.cmake  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.c  main.c  modifiedPMSM_Model.c  modifiedPMSM_Model.cmake  modifiedPMSM_Model.h  modifiedPMSM_Model.sln  modifiedPMSM_Model.vcxproj  modifiedPMSM_Model.vcxproj.filters  modifiedPMSM_Model_data.c  modifiedPMSM_Model_objects.vcxproj  modifiedPMSM_Model_objects.vcxproj.filters  modifiedPMSM_Model_private.h  modifiedPMSM_Model_types.h  multiword_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
